@@ -565,9 +565,9 @@ string(3) "''"
 
 
 Iteration 12
-'\000'
-'\000'
-string(6) "'\000'"
+'' . "\0" . ''
+'' . "\0" . ''
+string(14) "'' . "\0" . ''"
 
 
 Iteration 13
